--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,39 @@
+ul {
+  color: aliceblue;
+  text-align: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
+.li-nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+  text-align: center;
+}
+
+.logo {
+  width: 80px;
+  height: auto;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+body {
+  background-image: url("../images/backGround.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  font-family: "Montserrat", sans-serif;
+}
 
 /*# sourceMappingURL=styles.css.map */
