--- a/scss/partials/components/_body.scss
+++ b/scss/partials/components/_body.scss
@@ -1,31 +1,40 @@
-body{
-background-image: url("../images/backGround.jpg"); 
-  background-size: cover;         
-  background-repeat: no-repeat;   
-  background-position: center;    
-  background-attachment: fixed;   
+body {
+  background-image: url("../images/backGround.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   font-family: 'Montserrat', sans-serif;
   background-color: green;
 
+      .body-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto;
+        grid-template-areas:
+          "texto-1 texto-2"
+          "texto-3 texto-3";
+        padding: 20px;
+        text-align: center;
+        gap: 20px;
+        box-shadow: 0 30px 60px rgba(0, 0, 0, 0.2);
+      }
+
+      .testimonios-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        // grid-template-rows: repeat(4, 1fr);
+        gap: 20px;
+        padding: 20px;
+      }
 }
-.body-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: auto auto;
-    grid-template-areas: 
-    "texto-1 texto-2"
-    "texto-3 texto-3";
-  padding: 20px;
-    text-align: center;
-    gap: 20px;
-    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.2);
-}
-.testimonios-grid{
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      // grid-template-rows: repeat(4, 1fr);
-      gap: 20px;
-      padding: 20px;
+li{
+  list-style: none;     
+  margin: 0;            
+  padding: 0;
+  color: aliceblue; 
+  
+
 }
 .texto-1 {
   grid-area: texto-1;
