--- a/scss/partials/components/_nav.scss
+++ b/scss/partials/components/_nav.scss
@@ -1,27 +1,42 @@
-ul{
-    color: aliceblue;
-    text-align: center;
-    list-style: none;     
-    margin: 0;            
-     padding: 0; 
 
-}
+  nav ul{
+        list-style: none;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        column-gap: 20px;
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+         li{
+            list-style: none;
+            color: aliceblue;     
+            margin: 0;            
+            padding: 0; 
+            display: grid;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
+              a{
+                text-decoration: none;
+                color: aliceblue;
+                display: flex;
+                padding: 2px 4px;
+                border-radius: 10px;
+                transition: all 0.3s ease;
+                  &:hover{
+                          background-color: white;
+                          color: black;
+                          transform: scale(1.2);           
+                          box-shadow: 0px 4px 10px gray;
 
-.li-nav{
-list-style: none;     
-  margin: 0;            
-  padding: 0; 
 
-}
-a{
-
-     color: white;     
-  font-weight: bold;  
-  text-decoration: underline; 
-  text-align: center;
-}
+                    }
+              }
+        }
+}  
 .logo{
-        width: 80px;      
+        width: 30px;      
   height: auto;      
   position: absolute; 
   top: 10px;        
