--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,4 @@
 @use "./partials/components/header";
 @use "./partials/components/img";
 @use "./partials/components/media";
+@use "./partials/utilities/variables";
