--- a/scss/partials/components/_body.scss
+++ b/scss/partials/components/_body.scss
@@ -1,11 +1,12 @@
+@use "../utilities/variables";
 body {
   background-image: url("../images/backGround.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  font-family: 'Montserrat', sans-serif;
-  background-color: green;
+
+  
 
       .body-grid {
         display: grid;
@@ -17,13 +18,13 @@ body {
         padding: 20px;
         text-align: center;
         gap: 20px;
-        box-shadow: 0 30px 60px rgba(0, 0, 0, 0.2);
+        box-shadow: variables.$sombra-caja;
+;
       }
 
       .testimonios-grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        // grid-template-rows: repeat(4, 1fr);
         gap: 20px;
         padding: 20px;
       }
@@ -32,8 +33,7 @@ li{
   list-style: none;     
   margin: 0;            
   padding: 0;
-  color: aliceblue; 
-  
+  color: variables.$color-texto-claro; 
 
 }
 .texto-1 {
