--- a/scss/partials/components/_nav.scss
+++ b/scss/partials/components/_nav.scss
@@ -1,4 +1,5 @@
-
+@use "../utilities/variables";
+  
   nav ul{
         list-style: none;
         display: grid;
@@ -10,7 +11,7 @@
         justify-content: center;
          li{
             list-style: none;
-            color: aliceblue;     
+            color: variables.$color-texto-claro;     
             margin: 0;            
             padding: 0; 
             display: grid;
@@ -19,13 +20,13 @@
             align-items: center;
               a{
                 text-decoration: none;
-                color: aliceblue;
+                color: variables.$color-texto-claro; 
                 display: flex;
                 padding: 2px 4px;
                 border-radius: 10px;
                 transition: all 0.3s ease;
                   &:hover{
-                          background-color: white;
+                          background-color: variables.$color-texto-claro; 
                           color: black;
                           transform: scale(1.2);           
                           box-shadow: 0px 4px 10px gray;
