--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -1,5 +1,5 @@
 $color-texto-claro: aliceblue;
-$fuente-principal: "Montserrat", sans-serif;
+$fuente-principal: "Oswald", sans-serif;
 $texto-general: center;
 $sombra-hover: 0px 4px 10px gray;
 $sombra-caja: 0 30px 60px rgba(0, 0, 0, 0.2);
