--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,3 +11,5 @@
 @use "./partials/components/img";
 @use "./partials/components/media";
 @use "./partials/utilities/variables";
+@use "./partials/components/buttons";
+@use "./partials/components/footer";
