--- a/scss/partials/components/_footer.scss
+++ b/scss/partials/components/_footer.scss
@@ -1,4 +1,8 @@
 footer{
-     display: grid;
-     grid-template-columns: 1fr;
+        background-color: grey;
+}
+.footer-col {
+    border-right: 1px solid black; /* o el color que prefieras */
+    padding-right: 15px;
+    height: 80%;
 }
