--- a/scss/partials/base/_text.scss
+++ b/scss/partials/base/_text.scss
@@ -4,7 +4,7 @@ color: variables.$color-texto-claro;
 text-align: variables.$texto-general;
 }
 h2{
-    color: variables.$color-texto-claro;
+    color: aliceblue;
     text-align: variables.$texto-general;
 }
 
