--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -1,4 +1,4 @@
-$color-texto-claro: aliceblue;
+$color-texto-claro: rgb(242, 243, 244);
 $fuente-principal: "Oswald", sans-serif;
 $texto-general: center;
 $sombra-hover: 0px 4px 10px gray;
