--- a/scss/partials/components/_buttons.scss
+++ b/scss/partials/components/_buttons.scss
@@ -7,6 +7,8 @@
       border-radius: 8px;
       font-family: Arial, sans-serif;
       font-size: 16px;
+      margin-left: auto;
+      margin-right: auto;
       transition: background-color 0.3s ease;
       &:hover {
                 background-color: #218838; /* verde más oscuro */
