--- a/scss/partials/components/_media.scss
+++ b/scss/partials/components/_media.scss
@@ -120,13 +120,13 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    // grid-template-areas: none;
+    grid-template-areas: none;
     gap: 18px;
   }
 }
 
 /* Opcional: para móviles muy pequeños */
-@media (max-width: 600px) {
+@media (max-width: 992px) {
   
   body .testimonios-grid,
   body .images {
