--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -1,4 +1,5 @@
 $color-texto-claro: rgb(242, 243, 244);
+$transparencia: rgba(135, 151, 135, 0.452);
 $fuente-principal: "Oswald", sans-serif;
 $texto-general: center;
 $sombra-hover: 0px 4px 10px gray;
