--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,4 @@
 @use "./partials/utilities/variables";
 @use "./partials/components/buttons";
 @use "./partials/components/footer";
+@use "./partials/components/formulario";
