--- a/scss/partials/components/_footer.scss
+++ b/scss/partials/components/_footer.scss
@@ -10,54 +10,24 @@ footer{
                         height: 80%;
                         margin-left: auto;
                         margin-right: auto;
-                        .footer-col ul{
-                                      padding-left: 0; /* quita sangría */
-                                      list-style: none; /* quita viñetas */
-                                      text-align: center; /* centra texto */ 
-                                      .footer-col ul li a{
-                                                        text-decoration: none;
-                                                        color: aliceblue;
-                                                        }
-                                      }           
-                        }
-        }
-}
+                        
+                                    
+                    }           
+            }
+    }
+
        
 .footer-col .boton-link {
-    display: block; /* cambia a bloque */
-    width: fit-content; /* ajusta ancho al texto */
-    margin: 0 auto; /* centra horizontalmente */
+    display: block; 
+    width: fit-content; 
+    margin: 0 auto; 
 }         
-                        
-                                     
-
-
-
-// .row{
-//     align-items: center;
-//     justify-content: center;
-// }
-// .footer-col {
-    
-//     padding-right: 15px;
-//     height: 80%;
-//     margin-left: auto;
-//     margin-right: auto;
-// }
-// .footer-col ul{
-//                 padding-left: 0; /* quita sangría */
-//                 list-style: none; /* quita viñetas */
-//                 text-align: center; /* centra texto */
-
-// }
-
-// .footer-col ul{
-//                 padding-left: 0; /* quita sangría */
-//                 list-style: none; /* quita viñetas */
-//                 text-align: center; /* centra texto */
-                
-// }
-    // .footer-col ul a{
-    //                 text-decoration: none;
-    //                 color: aliceblue;
-    // }
+.footer-col ul{
+                                      padding-left: 0; 
+                                      list-style: none; 
+                                      text-align: center; 
+}
+.footer-col ul a{
+                    text-decoration: none;
+                    color: aliceblue;
+}
